# C-Compiler-Simulation

./: .gitignore  BNF.txt  CMakeLists.txt  Compilers.c  Compilers.h  Input.txt  Main1Coder.c  Main2Reader.c  Main3Scanner.c  Main4Parser.c  Main5Writer.c  README.md  Step1Coder.c  Step1Coder.h  Step2Reader.c  Step2Reader.h  Step3Scanner.c  Step3Scanner.h  Step4Parser.c  Step4Parser.h  Step5Writer.c  Step5Writer.h
